--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.12",
     "cordova": "^8.0.0",
-    "cordova-admob-sdk": "0.20.1",
+    "cordova-admob-sdk": "^0.20.1",
     "cordova-android": "6.4.0",
-    "cordova-plugin-admob-free": "0.21.0",
+    "cordova-plugin-admob-free": "^0.21.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^2.5.0",
     "cordova-plugin-googleplus": "^5.3.2",
